@@ -1,3 +1,8 @@
+2024-11-03 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* support/regression/tests/bug-3795.c:
+	  Add a regression test for a bug encountered in z88dk.
+
 2024-11-03 Benedikt Freisen <b.freisen AT gmx.net>
 	* support/regression/cases/Makefile.in:
 	  Tidy up list of excluded test cases.
